--- a/Calculus_HW_6.ipynb
+++ b/Calculus_HW_6.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd426181",
+   "id": "e6dc1fda",
    "metadata": {},
    "source": [
     "### $$\\frac{1}{1+(\\frac{y}{x})^2}\\cdot(\\frac{y}{x})'=\\frac{1}{\\sqrt{x^2+y^2}}\\cdot(\\sqrt{x^2+y^2})'$$"
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8dd9d2a",
+   "id": "8fa6a1a7",
    "metadata": {},
    "source": [
     "### $$\\frac{1}{1+(\\frac{y}{x})^2}\\cdot\\frac{y'x-y}{x^2}=\\frac{1}{\\sqrt{x^2+y^2}}\\cdot\\frac{1}{2\\sqrt{x^2+y^2}}\\cdot(x^2+y^2)'$$"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8741a3a7",
+   "id": "658924ea",
    "metadata": {},
    "source": [
     "### $$\\frac{y'x-y}{x^2+y^2}=\\frac{1}{2(x^2+y^2)}\\cdot(2x+2y\\cdot y')$$"
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f758f5f5",
+   "id": "489f4dc7",
    "metadata": {},
    "source": [
     "### $$\\frac{y'x-y}{x^2+y^2}=\\frac{2x+2yy'}{2(x^2+y^2)}$$"
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15288ae7",
+   "id": "34d479c5",
    "metadata": {},
    "source": [
     "### $$y'x-y=x+yy'$$"
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5587927d",
+   "id": "28582855",
    "metadata": {},
    "source": [
     "### $$y'(x-y)=x+y$$"
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1918c69f",
+   "id": "349ba0c7",
    "metadata": {},
    "source": [
     "### $$y'=\\frac{x+y}{x-y}$$"
@@ -111,8 +111,14 @@
    "id": "0fd74ced",
    "metadata": {},
    "source": [
-    "__2.__ Найти производную $y'_{x}$ функции:\n",
-    "\n",
+    "__2.__ Найти производную $y'_{x}$ функции:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cb406de",
+   "metadata": {},
+   "source": [
     "### \\begin{cases} y=\\frac{t^2}{t-1}, \\\\x=\\frac{t}{t^2-1} \\end{cases}"
    ]
   },
@@ -121,10 +127,7 @@
    "id": "50e2a3b2",
    "metadata": {},
    "source": [
-    "###  \\begin{cases}\n",
-    "   y'_{t}=(\\frac{t^2}{t-1})'=\\frac{(t^2)'(t-1)-t^2(t-1)'}{(t-1)^2}=\\frac{2t^2-2t-t^2}{(t-1)^2}=\\frac{t^2-2t}{(t-1)^2}, \\\\\n",
-    "   x'_{t}=(\\frac{t}{t^2-1})'=\\frac{(t)'(t^2-1)-t(t^2-1)'}{(t^2-1)^2}=\\frac{t^2-1-2t^2}{(t^2-1)^2}=\\frac{-t^2-1}{(t^2-1)^2}\n",
-    " \\end{cases}"
+    "### \\begin{cases} y'_{t}=(\\frac{t^2}{t-1})'=\\frac{(t^2)'(t-1)-t^2(t-1)'}{(t-1)^2}=\\frac{2t^2-2t-t^2}{(t-1)^2}=\\frac{t^2-2t}{(t-1)^2}, \\\\x'_{t}=(\\frac{t}{t^2-1})'=\\frac{(t)'(t^2-1)-t(t^2-1)'}{(t^2-1)^2}=\\frac{t^2-1-2t^2}{(t^2-1)^2}=\\frac{-t^2-1}{(t^2-1)^2} \\end{cases}"
    ]
   },
   {
@@ -316,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efa85527",
+   "id": "77beb21a",
    "metadata": {},
    "source": [
     "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot ((\\ln{(2-x^2)^3})'+(\\ln{(x-1)^2})'+(\\ln{(2x^3-3x)^{-1}})'+(\\ln{e^x})')=$$"
@@ -324,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18e42f06",
+   "id": "8829580b",
    "metadata": {},
    "source": [
     "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot (\\frac{3}{2-x^2}\\cdot(2-x^2)'+\\frac{2}{x-1}\\cdot(x-1)'+\\frac{-1}{2x^3-3x}\\cdot(2x^3-3x)'+(x\\ln{e})')=$$"
@@ -332,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c76e6282",
+   "id": "32f781d7",
    "metadata": {},
    "source": [
     "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot (\\frac{3\\cdot(-2x)}{2-x^2}+\\frac{2\\cdot(1)}{x-1}+\\frac{-1\\cdot(6x^2-3)}{2x^3-3x}+(x)'\\ln{e}+x(\\ln{e})')=$$"
@@ -340,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a1aa6c3",
+   "id": "eb44c392",
    "metadata": {},
    "source": [
     "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot (\\frac{-6x}{2-x^2}+\\frac{2}{x-1}+\\frac{3-6x^2}{2x^3-3x}+1+\\frac{x}{e})$$"
@@ -348,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c123c6ac",
+   "id": "bac6b5a4",
    "metadata": {},
    "source": [
     "__7.__ Найти длину $𝑥$ и ширину $𝑦$ прямоугольника при заданном периметре $𝑃=144$ cм, при которых данный прямоугольник имеет наибольшую площадь $𝑆$."
@@ -356,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c257c1d0",
+   "id": "56e779bd",
    "metadata": {},
    "source": [
     "### $$S=x\\cdot y$$"
@@ -364,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8957fe2",
+   "id": "0acf5709",
    "metadata": {},
    "source": [
     "### $$P=2\\cdot (x+y)=144$$"
@@ -372,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "514893f8",
+   "id": "d05b2546",
    "metadata": {},
    "source": [
     "соответственно"
@@ -380,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4abab648",
+   "id": "12e2847a",
    "metadata": {},
    "source": [
     "### \\begin{cases}\n",
@@ -391,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8548c532",
+   "id": "141f9da1",
    "metadata": {},
    "source": [
     "тогда"
@@ -399,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e960c86e",
+   "id": "c06fdbd2",
    "metadata": {},
    "source": [
     "### $$S=x\\cdot (72-x)=-x^2+72x$$"
@@ -407,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63946640",
+   "id": "995de5b4",
    "metadata": {},
    "source": [
     "возьмём производную от S"
@@ -415,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f394cb9e",
+   "id": "f90f2eca",
    "metadata": {},
    "source": [
     "### $$S'=(-x^2+72x)'=-2x+72$$"
@@ -423,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59036807",
+   "id": "7c899698",
    "metadata": {},
    "source": [
     "приравняем производную к нулю и найдём экстремум"
@@ -431,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2743b8bb",
+   "id": "111f7b9a",
    "metadata": {},
    "source": [
     "### $$-2x+72=0$$"
@@ -439,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8faf66a8",
+   "id": "c49246cc",
    "metadata": {},
    "source": [
     "### $$x=36$$"
@@ -447,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82817f14",
+   "id": "9e72acf0",
    "metadata": {},
    "source": [
     "тогда"
@@ -455,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a34dc0a1",
+   "id": "2a4e4c2a",
    "metadata": {},
    "source": [
     "### $$y=72-x=72-36=36$$"
@@ -463,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e54b7917",
+   "id": "52fc631a",
    "metadata": {},
    "source": [
     "#### ответ: при x и y = 36 площадь прямоугольника с периметром = 144 является максимальной"
@@ -472,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b14b16ff",
+   "id": "27567a44",
    "metadata": {},
    "outputs": [],
    "source": []
