--- a/Calculus_HW_6.ipynb
+++ b/Calculus_HW_6.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6dc1fda",
+   "id": "88d4da73",
    "metadata": {},
    "source": [
     "### $$\\frac{1}{1+(\\frac{y}{x})^2}\\cdot(\\frac{y}{x})'=\\frac{1}{\\sqrt{x^2+y^2}}\\cdot(\\sqrt{x^2+y^2})'$$"
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fa6a1a7",
+   "id": "f85d2a32",
    "metadata": {},
    "source": [
     "### $$\\frac{1}{1+(\\frac{y}{x})^2}\\cdot\\frac{y'x-y}{x^2}=\\frac{1}{\\sqrt{x^2+y^2}}\\cdot\\frac{1}{2\\sqrt{x^2+y^2}}\\cdot(x^2+y^2)'$$"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "658924ea",
+   "id": "7c0a4e4e",
    "metadata": {},
    "source": [
     "### $$\\frac{y'x-y}{x^2+y^2}=\\frac{1}{2(x^2+y^2)}\\cdot(2x+2y\\cdot y')$$"
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "489f4dc7",
+   "id": "f1e652f9",
    "metadata": {},
    "source": [
     "### $$\\frac{y'x-y}{x^2+y^2}=\\frac{2x+2yy'}{2(x^2+y^2)}$$"
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34d479c5",
+   "id": "d0f2a217",
    "metadata": {},
    "source": [
     "### $$y'x-y=x+yy'$$"
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28582855",
+   "id": "3508be17",
    "metadata": {},
    "source": [
     "### $$y'(x-y)=x+y$$"
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "349ba0c7",
+   "id": "f2a68497",
    "metadata": {},
    "source": [
     "### $$y'=\\frac{x+y}{x-y}$$"
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cb406de",
+   "id": "a34f750b",
    "metadata": {},
    "source": [
     "### \\begin{cases} y=\\frac{t^2}{t-1}, \\\\x=\\frac{t}{t^2-1} \\end{cases}"
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77beb21a",
+   "id": "9633c010",
    "metadata": {},
    "source": [
     "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot ((\\ln{(2-x^2)^3})'+(\\ln{(x-1)^2})'+(\\ln{(2x^3-3x)^{-1}})'+(\\ln{e^x})')=$$"
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8829580b",
+   "id": "c6286971",
    "metadata": {},
    "source": [
     "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot (\\frac{3}{2-x^2}\\cdot(2-x^2)'+\\frac{2}{x-1}\\cdot(x-1)'+\\frac{-1}{2x^3-3x}\\cdot(2x^3-3x)'+(x\\ln{e})')=$$"
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32f781d7",
+   "id": "85278f7a",
    "metadata": {},
    "source": [
     "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot (\\frac{3\\cdot(-2x)}{2-x^2}+\\frac{2\\cdot(1)}{x-1}+\\frac{-1\\cdot(6x^2-3)}{2x^3-3x}+(x)'\\ln{e}+x(\\ln{e})')=$$"
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb44c392",
+   "id": "f2d72020",
    "metadata": {},
    "source": [
     "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot (\\frac{-6x}{2-x^2}+\\frac{2}{x-1}+\\frac{3-6x^2}{2x^3-3x}+1+\\frac{x}{e})$$"
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bac6b5a4",
+   "id": "5aa7829a",
    "metadata": {},
    "source": [
     "__7.__ Найти длину $𝑥$ и ширину $𝑦$ прямоугольника при заданном периметре $𝑃=144$ cм, при которых данный прямоугольник имеет наибольшую площадь $𝑆$."
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56e779bd",
+   "id": "7598e94f",
    "metadata": {},
    "source": [
     "### $$S=x\\cdot y$$"
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0acf5709",
+   "id": "98214749",
    "metadata": {},
    "source": [
     "### $$P=2\\cdot (x+y)=144$$"
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d05b2546",
+   "id": "49b54a1a",
    "metadata": {},
    "source": [
     "соответственно"
@@ -383,18 +383,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12e2847a",
+   "id": "50f17c0f",
    "metadata": {},
    "source": [
-    "### \\begin{cases}\n",
-    "   y=72-x, \\\\\n",
-    "   x=72-y \n",
-    " \\end{cases}"
+    "### \\begin{cases} y=72-x, \\\\x=72-y \\end{cases}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "141f9da1",
+   "id": "77caaedd",
    "metadata": {},
    "source": [
     "тогда"
@@ -402,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c06fdbd2",
+   "id": "4e6a6750",
    "metadata": {},
    "source": [
     "### $$S=x\\cdot (72-x)=-x^2+72x$$"
@@ -410,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "995de5b4",
+   "id": "18f37821",
    "metadata": {},
    "source": [
     "возьмём производную от S"
@@ -418,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f90f2eca",
+   "id": "a61ec802",
    "metadata": {},
    "source": [
     "### $$S'=(-x^2+72x)'=-2x+72$$"
@@ -426,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c899698",
+   "id": "c1a1a40b",
    "metadata": {},
    "source": [
     "приравняем производную к нулю и найдём экстремум"
@@ -434,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "111f7b9a",
+   "id": "aaae0ed0",
    "metadata": {},
    "source": [
     "### $$-2x+72=0$$"
@@ -442,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c49246cc",
+   "id": "5b139168",
    "metadata": {},
    "source": [
     "### $$x=36$$"
@@ -450,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e72acf0",
+   "id": "66241007",
    "metadata": {},
    "source": [
     "тогда"
@@ -458,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a4e4c2a",
+   "id": "b8193598",
    "metadata": {},
    "source": [
     "### $$y=72-x=72-36=36$$"
@@ -466,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52fc631a",
+   "id": "9b5345ec",
    "metadata": {},
    "source": [
     "#### ответ: при x и y = 36 площадь прямоугольника с периметром = 144 является максимальной"
@@ -475,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27567a44",
+   "id": "eacea27e",
    "metadata": {},
    "outputs": [],
    "source": []
