--- a/Calculus_HW_6.ipynb
+++ b/Calculus_HW_6.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88d4da73",
+   "id": "cf37f764",
    "metadata": {},
    "source": [
     "### $$\\frac{1}{1+(\\frac{y}{x})^2}\\cdot(\\frac{y}{x})'=\\frac{1}{\\sqrt{x^2+y^2}}\\cdot(\\sqrt{x^2+y^2})'$$"
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f85d2a32",
+   "id": "9feeb86b",
    "metadata": {},
    "source": [
     "### $$\\frac{1}{1+(\\frac{y}{x})^2}\\cdot\\frac{y'x-y}{x^2}=\\frac{1}{\\sqrt{x^2+y^2}}\\cdot\\frac{1}{2\\sqrt{x^2+y^2}}\\cdot(x^2+y^2)'$$"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c0a4e4e",
+   "id": "b3372814",
    "metadata": {},
    "source": [
     "### $$\\frac{y'x-y}{x^2+y^2}=\\frac{1}{2(x^2+y^2)}\\cdot(2x+2y\\cdot y')$$"
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1e652f9",
+   "id": "da469389",
    "metadata": {},
    "source": [
     "### $$\\frac{y'x-y}{x^2+y^2}=\\frac{2x+2yy'}{2(x^2+y^2)}$$"
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0f2a217",
+   "id": "e0ba7b41",
    "metadata": {},
    "source": [
     "### $$y'x-y=x+yy'$$"
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3508be17",
+   "id": "7590cdb9",
    "metadata": {},
    "source": [
     "### $$y'(x-y)=x+y$$"
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2a68497",
+   "id": "63a87bdf",
    "metadata": {},
    "source": [
     "### $$y'=\\frac{x+y}{x-y}$$"
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a34f750b",
+   "id": "b63542bd",
    "metadata": {},
    "source": [
     "### \\begin{cases} y=\\frac{t^2}{t-1}, \\\\x=\\frac{t}{t^2-1} \\end{cases}"
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9633c010",
+   "id": "04bf01be",
    "metadata": {},
    "source": [
     "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot ((\\ln{(2-x^2)^3})'+(\\ln{(x-1)^2})'+(\\ln{(2x^3-3x)^{-1}})'+(\\ln{e^x})')=$$"
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6286971",
+   "id": "51e55345",
    "metadata": {},
    "source": [
     "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot (\\frac{3}{2-x^2}\\cdot(2-x^2)'+\\frac{2}{x-1}\\cdot(x-1)'+\\frac{-1}{2x^3-3x}\\cdot(2x^3-3x)'+(x\\ln{e})')=$$"
@@ -335,23 +335,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85278f7a",
+   "id": "e9def61d",
    "metadata": {},
    "source": [
-    "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot (\\frac{3\\cdot(-2x)}{2-x^2}+\\frac{2\\cdot(1)}{x-1}+\\frac{-1\\cdot(6x^2-3)}{2x^3-3x}+(x)'\\ln{e}+x(\\ln{e})')=$$"
+    "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot (\\frac{3\\cdot(-2x)}{2-x^2}+\\frac{2\\cdot(1)}{x-1}+\\frac{-1\\cdot(6x^2-3)}{2x^3-3x}+(x\\cdot 1)')=$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f2d72020",
+   "id": "8104704d",
    "metadata": {},
    "source": [
-    "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot (\\frac{-6x}{2-x^2}+\\frac{2}{x-1}+\\frac{3-6x^2}{2x^3-3x}+1+\\frac{x}{e})$$"
+    "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot (\\frac{-6x}{2-x^2}+\\frac{2}{x-1}+\\frac{3-6x^2}{2x^3-3x}+1)$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5aa7829a",
+   "id": "95491d28",
    "metadata": {},
    "source": [
     "__7.__ Найти длину $𝑥$ и ширину $𝑦$ прямоугольника при заданном периметре $𝑃=144$ cм, при которых данный прямоугольник имеет наибольшую площадь $𝑆$."
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7598e94f",
+   "id": "b6f49608",
    "metadata": {},
    "source": [
     "### $$S=x\\cdot y$$"
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98214749",
+   "id": "c91fdb59",
    "metadata": {},
    "source": [
     "### $$P=2\\cdot (x+y)=144$$"
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49b54a1a",
+   "id": "9f190477",
    "metadata": {},
    "source": [
     "соответственно"
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50f17c0f",
+   "id": "8e7756d4",
    "metadata": {},
    "source": [
     "### \\begin{cases} y=72-x, \\\\x=72-y \\end{cases}"
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77caaedd",
+   "id": "34dfde34",
    "metadata": {},
    "source": [
     "тогда"
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e6a6750",
+   "id": "5445374b",
    "metadata": {},
    "source": [
     "### $$S=x\\cdot (72-x)=-x^2+72x$$"
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18f37821",
+   "id": "faa709d9",
    "metadata": {},
    "source": [
     "возьмём производную от S"
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a61ec802",
+   "id": "ad7eab3f",
    "metadata": {},
    "source": [
     "### $$S'=(-x^2+72x)'=-2x+72$$"
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1a1a40b",
+   "id": "76f0afe5",
    "metadata": {},
    "source": [
     "приравняем производную к нулю и найдём экстремум"
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaae0ed0",
+   "id": "d45c55cb",
    "metadata": {},
    "source": [
     "### $$-2x+72=0$$"
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b139168",
+   "id": "40bab1f4",
    "metadata": {},
    "source": [
     "### $$x=36$$"
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66241007",
+   "id": "7beec793",
    "metadata": {},
    "source": [
     "тогда"
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8193598",
+   "id": "808d1891",
    "metadata": {},
    "source": [
     "### $$y=72-x=72-36=36$$"
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b5345ec",
+   "id": "8faf10c2",
    "metadata": {},
    "source": [
     "#### ответ: при x и y = 36 площадь прямоугольника с периметром = 144 является максимальной"
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eacea27e",
+   "id": "34665e5e",
    "metadata": {},
    "outputs": [],
    "source": []
