--- a/Calculus_HW_6.ipynb
+++ b/Calculus_HW_6.ipynb
@@ -322,7 +322,7 @@
    "id": "04bf01be",
    "metadata": {},
    "source": [
-    "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot ((\\ln{(2-x^2)^3})'+(\\ln{(x-1)^2})'+(\\ln{(2x^3-3x)^{-1}})'+(\\ln{e^x})')=$$"
+    "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot ((\\ln{(2-x^2)^3})'+(\\ln{(x-1)^2})'+(\\ln{(2x^3-3x)^{-1}})'+(\\ln{e^{-x}})')=$$"
    ]
   },
   {
@@ -330,7 +330,7 @@
    "id": "51e55345",
    "metadata": {},
    "source": [
-    "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot (\\frac{3}{2-x^2}\\cdot(2-x^2)'+\\frac{2}{x-1}\\cdot(x-1)'+\\frac{-1}{2x^3-3x}\\cdot(2x^3-3x)'+(x\\ln{e})')=$$"
+    "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot (\\frac{3}{2-x^2}\\cdot(2-x^2)'+\\frac{2}{x-1}\\cdot(x-1)'+\\frac{-1}{2x^3-3x}\\cdot(2x^3-3x)'+(-x\\ln{e})')=$$"
    ]
   },
   {
@@ -338,7 +338,7 @@
    "id": "e9def61d",
    "metadata": {},
    "source": [
-    "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot (\\frac{3\\cdot(-2x)}{2-x^2}+\\frac{2\\cdot(1)}{x-1}+\\frac{-1\\cdot(6x^2-3)}{2x^3-3x}+(x\\cdot 1)')=$$"
+    "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot (\\frac{3\\cdot(-2x)}{2-x^2}+\\frac{2\\cdot(1)}{x-1}+\\frac{-1\\cdot(6x^2-3)}{2x^3-3x}+(-x\\cdot 1)')=$$"
    ]
   },
   {
@@ -346,7 +346,7 @@
    "id": "8104704d",
    "metadata": {},
    "source": [
-    "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot (\\frac{-6x}{2-x^2}+\\frac{2}{x-1}+\\frac{3-6x^2}{2x^3-3x}+1)$$"
+    "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot (\\frac{-6x}{2-x^2}+\\frac{2}{x-1}+\\frac{3-6x^2}{2x^3-3x}-1)$$"
    ]
   },
   {
