--- a/Calculus_HW_7.ipynb
+++ b/Calculus_HW_7.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6a05947",
+   "id": "29e7fac5",
    "metadata": {},
    "source": [
     "__1.__ Найти частные производные первого и второго порядка. Убедиться в равенстве смешанных производных.\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaede077",
+   "id": "68d2f90d",
    "metadata": {},
    "source": [
     "Найдем все частные производные первого и второго порядка."
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45f927b3",
+   "id": "f418bff7",
    "metadata": {},
    "source": [
     "### $$U'_{x}=3x+3y^2-39$$"
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e7572ab",
+   "id": "9274a7c8",
    "metadata": {},
    "source": [
     "### $$U'_{y}=6xy-36$$"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83894e9e",
+   "id": "66fea4a6",
    "metadata": {},
    "source": [
     "### $$U'_{z}=2z+2$$"
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70990046",
+   "id": "0d2a006a",
    "metadata": {},
    "source": [
     "### $$U''_{xx}=3$$"
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dc7ce3c",
+   "id": "2996ec6c",
    "metadata": {},
    "source": [
     "### $$U''_{xy}=6y$$"
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad1f0047",
+   "id": "e284f99e",
    "metadata": {},
    "source": [
     "### $$U''_{xz}=0$$"
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33852043",
+   "id": "f0c9b28e",
    "metadata": {},
    "source": [
     "### $$U''_{yx}=6y$$"
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2a9cdef",
+   "id": "028563ea",
    "metadata": {},
    "source": [
     "### $$U''_{yy}=6x$$"
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47d2d647",
+   "id": "ab4267fe",
    "metadata": {},
    "source": [
     "### $$U''_{yz}=0$$"
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c8eba9f",
+   "id": "6f08d723",
    "metadata": {},
    "source": [
     "### $$U''_{zx}=0$$"
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2737baa4",
+   "id": "4274a329",
    "metadata": {},
    "source": [
     "### $$U''_{zy}=0$$"
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c917363f",
+   "id": "3a97eaa7",
    "metadata": {},
    "source": [
     "### $$U''_{zz}=2$$"
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b84b074b",
+   "id": "bf939d4a",
    "metadata": {},
    "source": [
     "Убедимся в равенстве смешанных производных."
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "548f5fb1",
+   "id": "4ba6d79f",
    "metadata": {},
    "source": [
     "### $$U''_{xy}=U''_{yx}$$"
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50a7a286",
+   "id": "974a31fa",
    "metadata": {},
    "source": [
     "### $$U''_{xz}=U''_{zx}$$"
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e229f063",
+   "id": "74bbc492",
    "metadata": {},
    "source": [
     "### $$U''_{yz}=U''_{zy}$$"
@@ -181,14 +181,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98014a82",
+   "id": "569543b0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "84a2487d",
+   "id": "64a5a15f",
    "metadata": {},
    "source": [
     "__2.__ Найти частные производные первого и второго порядка. Убедиться в равенстве смешанных производных.\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16d48698",
+   "id": "df3363f9",
    "metadata": {},
    "source": [
     "### $$U=\\frac{256}{x}+\\frac{x^2}{y}+\\frac{y^2}{z}+z^2=256x^{-1}+x^2y^{-1}+y^2z^{-1}+z^2$$"
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34f9b7d1",
+   "id": "f8bd568c",
    "metadata": {},
    "source": [
     "### $$U'_{x}=-256x^{-2}+2xy^{-1}$$"
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9446b3d2",
+   "id": "d932450a",
    "metadata": {},
    "source": [
     "### $$U'_{y}=-x^2y^{-2}+2yz^{-1}$$"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64869a76",
+   "id": "7f9eea73",
    "metadata": {},
    "source": [
     "### $$U'_{z}=-y^2z^{-2}+2z$$"
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bb75dad",
+   "id": "f3e363e4",
    "metadata": {},
    "source": [
     "### $$U''_{xx}=512x^{-3}+2y^{-1}$$"
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1800ccbb",
+   "id": "54a0a267",
    "metadata": {},
    "source": [
     "### $$U''_{xy}=-2xy^{-2}$$"
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a38009ef",
+   "id": "3db96ff0",
    "metadata": {},
    "source": [
     "### $$U''_{xz}=0$$"
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86b18071",
+   "id": "6a604d15",
    "metadata": {},
    "source": [
     "### $$U''_{yx}=-2xy^{-2}$$"
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13b46180",
+   "id": "ff45273e",
    "metadata": {},
    "source": [
     "### $$U''_{yy}=2x^2y^{-3}+2z^{-1}$$"
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64b0ae3d",
+   "id": "11c577a4",
    "metadata": {},
    "source": [
     "### $$U''_{yz}=-2yz^{-2}$$"
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef0dd06b",
+   "id": "94039668",
    "metadata": {},
    "source": [
     "### $$U''_{zx}=0$$"
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ea8ceb4",
+   "id": "81a1ee53",
    "metadata": {},
    "source": [
     "### $$U''_{zy}=-2yz^{-2}$$"
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7721f730",
+   "id": "dde08613",
    "metadata": {},
    "source": [
     "### $$U''_{zz}=2y^2z^{-3}+2$$"
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aff17ac5",
+   "id": "15375a62",
    "metadata": {},
    "source": [
     "Убедимся в равенстве смешанных производных."
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c846d08",
+   "id": "1f1069b6",
    "metadata": {},
    "source": [
     "### $$U''_{xy}=U''_{yx}$$"
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cc566a6",
+   "id": "512e5119",
    "metadata": {},
    "source": [
     "### $$U''_{xz}=U''_{zx}$$"
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36108c4b",
+   "id": "1518912f",
    "metadata": {},
    "source": [
     "### $$U''_{yz}=U''_{zy}$$"
@@ -335,14 +335,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fa9ecb7",
+   "id": "b460d3ea",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "424942c6",
+   "id": "0a39b8f7",
    "metadata": {},
    "source": [
     "__3.__ Найти производную функции $U=x^2+y^2+z^2$ по направлению вектора $\\overrightarrow{c}(-9,8,-12)$ в точке $M(8,-12,9)$"
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aac6ccec",
+   "id": "b51feb52",
    "metadata": {},
    "source": [
     "Найдем длину вектора $\\overrightarrow{c}$:"
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63be8780",
+   "id": "c420e2ad",
    "metadata": {},
    "source": [
     "### $$|\\overrightarrow{c}|=\\sqrt{x^2_{0}+y^2_{0}+z^2_{0}}=\\sqrt{(-9)^2+8^2+(-12)^2}=\\sqrt{289}=17$$"
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b73bd294",
+   "id": "11fa72d8",
    "metadata": {},
    "source": [
     "Запишем единичный вектор $\\overrightarrow{c}_{0}$:"
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab1492bf",
+   "id": "dcbb99cd",
    "metadata": {},
    "source": [
     "### $$\\overrightarrow{c_{0}}=\\frac{\\overrightarrow{c}}{|\\overrightarrow{c}|}=\\Bigr(-\\frac{9}{17},\\frac{8}{17},-\\frac{12}{17}\\Bigl)$$"
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "025a0109",
+   "id": "a0ee9975",
    "metadata": {},
    "source": [
     "Теперь найдем градиент в точке 𝑀(8,−12,9)."
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cef897ff",
+   "id": "ce87fc38",
    "metadata": {},
    "source": [
     "### $$U'_{x}=2x$$"
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bf88207",
+   "id": "50fff94d",
    "metadata": {},
    "source": [
     "### $$U'_{y}=2y$$"
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5145023",
+   "id": "f44c43bd",
    "metadata": {},
    "source": [
     "### $$U'_{z}=2z$$"
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e39967f5",
+   "id": "0908f74a",
    "metadata": {},
    "source": [
     "### $$\\mbox{grad}U=(2\\cdot8,2\\cdot(-12),11\\cdot9)=(16,-24,18)$$"
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de4dc1f5",
+   "id": "ea938029",
    "metadata": {},
    "source": [
     "Посчитаем значение производной."
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "034be1a2",
+   "id": "026d44a6",
    "metadata": {},
    "source": [
     "### $$U'_{\\overrightarrow{c}}=-\\frac{9}{17}\\cdot16+\\frac{8}{17}\\cdot(-24)-\\frac{12}{17}\\cdot18=-\\frac{552}{17}$$"
@@ -439,14 +439,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bcfea00",
+   "id": "7d88e01a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "8711ea29",
+   "id": "bf1e5905",
    "metadata": {},
    "source": [
     "__4.__ Найти производную функции $U=e^{x^2+y^2+z^2}$ по направлению вектора $\\overrightarrow{c}(4,-13,-16)$ в точке $L(-16,4,-13)$"
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6173625",
+   "id": "2bf0b686",
    "metadata": {},
    "source": [
     "Найдем длину вектора $\\overrightarrow{c}$:"
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7851722a",
+   "id": "b39a8c8a",
    "metadata": {},
    "source": [
     "### $$|\\overrightarrow{c}|=\\sqrt{x^2_{0}+y^2_{0}+z^2_{0}}=\\sqrt{4^2+(-13)^2+(-16)^2}=21$$"
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30fe2676",
+   "id": "c9e47a7c",
    "metadata": {},
    "source": [
     "Запишем единичный вектор $\\overrightarrow{c}_{0}$:"
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91000ca8",
+   "id": "0309002c",
    "metadata": {},
    "source": [
     "### $$\\overrightarrow{c_{0}}=\\frac{\\overrightarrow{c}}{|\\overrightarrow{c}|}=\\Bigr(\\frac{4}{21},-\\frac{13}{21},-\\frac{12}{21}\\Bigl)$$"
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98deccdb",
+   "id": "0aeca147",
    "metadata": {},
    "source": [
     "Теперь найдем градиент в точке 𝐿(−16,4,−13)."
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f95cecdb",
+   "id": "feee953d",
    "metadata": {},
    "source": [
     "### $$U'_{x}=2xe^{x^2+y^2+z^2}$$"
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d19bd64",
+   "id": "0a6d05da",
    "metadata": {},
    "source": [
     "### $$U'_{y}=2ye^{x^2+y^2+z^2}$$"
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad3addbb",
+   "id": "b045f437",
    "metadata": {},
    "source": [
     "### $$U'_{z}=2ze^{x^2+y^2+z^2}$$"
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ad2c5ed",
+   "id": "fc9c8a14",
    "metadata": {},
    "source": [
     "### $$\\mbox{grad}U=(32e^{441},8e^{441},26e^{441})$$"
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8d6126d",
+   "id": "8fef34bc",
    "metadata": {},
    "source": [
     "Посчитаем значение производной."
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c533116d",
+   "id": "ff888f19",
    "metadata": {},
    "source": [
     "### $$U'_{\\overrightarrow{c}}=\\frac{4}{21}\\cdot32e^{441}-\\frac{13}{21}\\cdot8e^{441}-\\frac{12}{21}\\cdot26e^{441}$$"
@@ -543,14 +543,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "171eb35e",
+   "id": "9c461712",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ce8fdca9",
+   "id": "377c43fe",
    "metadata": {},
    "source": [
     "__6.__ Исследовать на экстремум функцию:\n",
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e37ea2ab",
+   "id": "83778dcb",
    "metadata": {},
    "source": [
     "Найдем частные производные, приравняем их к нулю и найдем стационарные точки:"
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b7b0cac",
+   "id": "8127e11d",
    "metadata": {},
    "source": [
     "### $$\\begin{cases}\n",
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6810b26",
+   "id": "71ccfb23",
    "metadata": {},
    "source": [
     "Выразим из первого уравнения $x$, подставим во второе и найдём $x$ и $y$:"
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe7f295a",
+   "id": "3939bc17",
    "metadata": {},
    "source": [
     "### $$\\begin{cases}\n",
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d0f6ff3",
+   "id": "33b8f56d",
    "metadata": {},
    "source": [
     "Получаем точку (0,6)"
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e55867f",
+   "id": "c91d68dc",
    "metadata": {},
    "source": [
     "Теперь найдем вторые производные и составим матрицу Гёссе:"
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6752e92",
+   "id": "f1a7262e",
    "metadata": {},
    "source": [
     "###  $$U''_{xx}=2y+4$$"
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bd3277c",
+   "id": "a99c755d",
    "metadata": {},
    "source": [
     "###  $$U''_{xy}=U''_{yx}=2x$$"
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eab70c4b",
+   "id": "72f9dfaa",
    "metadata": {},
    "source": [
     "###  $$U''_{yy}=2y+6$$"
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a04fee19",
+   "id": "ef3812e3",
    "metadata": {},
    "source": [
     "###  $$\\begin{pmatrix}\n",
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0036340",
+   "id": "5b34381b",
    "metadata": {},
    "source": [
     "Теперь можно вычислить главные миноры:"
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "842a3cd1",
+   "id": "04a0f476",
    "metadata": {},
    "source": [
     "### $$\\Delta_{1}=U''_{xx}=2y+4$$"
@@ -665,18 +665,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c71a24bc",
+   "id": "e9c73fe1",
    "metadata": {},
    "source": [
-    "### $$\\Delta_{2}=\\begin{vmatrix}\n",
-    "U''_{xx} & U''_{xy}\\\\ \n",
-    "U''_{yx} & U''_{yy}\\\\\n",
-    "\\end{vmatrix}=U''_{xx}\\cdot U''_{yy}-(U''_{xy})^2=(2y+4)(2y+6)-(2x)^2=-4x^2+4y^2+20y+24$$"
+    "### $$\\Delta_{2}=\\begin{vmatrix} U''_{xx} & U''_{xy}\\\\ U''_{yx} & U''_{yy}\\\\ \\end{vmatrix}=U''_{xx}\\cdot U''_{yy}-(U''_{xy})^2=(2y+4)(2y+6)-(2x)^2=-4x^2+4y^2+20y+24$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d0937dd0",
+   "id": "5f10df1f",
    "metadata": {},
    "source": [
     "Проверим знаки миноров для точки (0,6). "
@@ -684,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "701504b3",
+   "id": "cb6a6a4a",
    "metadata": {},
    "source": [
     "### $$\\Delta_{1}=2\\cdot6+4>0$$"
@@ -692,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d40488c",
+   "id": "03fc9fe4",
    "metadata": {},
    "source": [
     "### $$\\Delta_{2}=-4\\cdot0^2+4\\cdot6^2+20\\cdot6+24>0$$"
@@ -700,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fd9f386",
+   "id": "77ff9ebb",
    "metadata": {},
    "source": [
     "Оба минора положительные, это говорит о том, что найденная точка (0,6) является точкой минимума."
@@ -709,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92505e31",
+   "id": "37f60993",
    "metadata": {},
    "outputs": [],
    "source": []
