--- a/Calculus_HW_7.ipynb
+++ b/Calculus_HW_7.ipynb
@@ -571,10 +571,7 @@
    "id": "8127e11d",
    "metadata": {},
    "source": [
-    "### $$\\begin{cases}\n",
-    "   U'_{x}=2xy+4x=0, \\\\\n",
-    "   U'_{y}=x^2+y^2+6y=0 \n",
-    " \\end{cases}$$"
+    "### $$\\begin{cases} U'_{x}=2xy+4x=0, \\\\ U'_{y}=x^2+y^2+6y=0\\end{cases}$$"
    ]
   },
   {
@@ -590,10 +587,7 @@
    "id": "3939bc17",
    "metadata": {},
    "source": [
-    "### $$\\begin{cases}\n",
-    "   x=0, \\\\\n",
-    "   y=-6 \n",
-    " \\end{cases}$$"
+    "### $$\\begin{cases} x=0, \\\\ y=-6\\end{cases}$$"
    ]
   },
   {
@@ -641,10 +635,7 @@
    "id": "ef3812e3",
    "metadata": {},
    "source": [
-    "###  $$\\begin{pmatrix}\n",
-    "2y+4 & 2x\\\\ \n",
-    "2x & 2y+6\\\\\n",
-    "\\end{pmatrix}$$"
+    "###  $$\\begin{pmatrix} 2y+4 & 2x\\\\ 2x & 2y+6\\\\ \\end{pmatrix}$$"
    ]
   },
   {
