--- a/Calculus_HW_7.ipynb
+++ b/Calculus_HW_7.ipynb
@@ -55,7 +55,7 @@
    "id": "f418bff7",
    "metadata": {},
    "source": [
-    "### $$U'_{x}=3x+3y^2-39$$"
+    "### $$U'_{x}=3x^2+3y^2-39$$"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "id": "0d2a006a",
    "metadata": {},
    "source": [
-    "### $$U''_{xx}=3$$"
+    "### $$U''_{xx}=6x$$"
    ]
   },
   {
@@ -481,7 +481,7 @@
    "id": "0309002c",
    "metadata": {},
    "source": [
-    "### $$\\overrightarrow{c_{0}}=\\frac{\\overrightarrow{c}}{|\\overrightarrow{c}|}=\\Bigr(\\frac{4}{21},-\\frac{13}{21},-\\frac{12}{21}\\Bigl)$$"
+    "### $$\\overrightarrow{c_{0}}=\\frac{\\overrightarrow{c}}{|\\overrightarrow{c}|}=\\Bigr(\\frac{4}{21},-\\frac{13}{21},-\\frac{16}{21}\\Bigl)$$"
    ]
   },
   {
@@ -521,7 +521,7 @@
    "id": "fc9c8a14",
    "metadata": {},
    "source": [
-    "### $$\\mbox{grad}U=(32e^{441},8e^{441},26e^{441})$$"
+    "### $$\\mbox{grad}U=(-32e^{441},8e^{441},-26e^{441})$$"
    ]
   },
   {
@@ -537,7 +537,7 @@
    "id": "ff888f19",
    "metadata": {},
    "source": [
-    "### $$U'_{\\overrightarrow{c}}=\\frac{4}{21}\\cdot32e^{441}-\\frac{13}{21}\\cdot8e^{441}-\\frac{12}{21}\\cdot26e^{441}$$"
+    "### $$U'_{\\overrightarrow{c}}=\\frac{4}{21}\\cdot(-32)\\cdot e^{441}-\\frac{13}{21}\\cdot8\\cdot e^{441}-\\frac{16}{21}\\cdot(-26)\\cdot e^{441}=\\frac{184}{21}e^{441}$$"
    ]
   },
   {
@@ -576,10 +576,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71ccfb23",
+   "id": "2e8b397e",
    "metadata": {},
    "source": [
-    "Выразим из первого уравнения $x$, подставим во второе и найдём $x$ и $y$:"
+    "### $$\\begin{cases} x=0, \\\\ y=-2, \\\\ x^2+y^2+6y=0\\end{cases}$$"
    ]
   },
   {
@@ -587,7 +587,7 @@
    "id": "3939bc17",
    "metadata": {},
    "source": [
-    "### $$\\begin{cases} x=0, \\\\ y=-6\\end{cases}$$"
+    "### $$\\begin{cases} x=0, \\\\ y^2+6y=0, \\\\ y=-2, \\\\ x^2=8\\end{cases}$$"
    ]
   },
   {
@@ -595,7 +595,7 @@
    "id": "33b8f56d",
    "metadata": {},
    "source": [
-    "Получаем точку (0,6)"
+    "Получаем точки (0,0), (0,-6), ($2\\sqrt2$,-2), ($-2\\sqrt2$,-2)"
    ]
   },
   {
@@ -664,10 +664,42 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6143eb8b",
+   "metadata": {},
+   "source": [
+    "Проверим знаки миноров для точки (0,0). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bb751de",
+   "metadata": {},
+   "source": [
+    "### $$\\Delta_{1}=2y+4=2\\cdot 0+4>0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "943eecde",
+   "metadata": {},
+   "source": [
+    "### $$\\Delta_{2}=-4x^2+4y^2+20y+24=-4\\cdot0^2+4\\cdot 0^2+20\\cdot 0+24>0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc33169b",
+   "metadata": {},
+   "source": [
+    "точка (0,0) является точкой минимума"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5f10df1f",
    "metadata": {},
    "source": [
-    "Проверим знаки миноров для точки (0,6). "
+    "Проверим знаки миноров для точки (0,-6). "
    ]
   },
   {
@@ -675,7 +707,7 @@
    "id": "cb6a6a4a",
    "metadata": {},
    "source": [
-    "### $$\\Delta_{1}=2\\cdot6+4>0$$"
+    "### $$\\Delta_{1}=2y+4=2\\cdot (-6)+4<0$$"
    ]
   },
   {
@@ -683,7 +715,7 @@
    "id": "03fc9fe4",
    "metadata": {},
    "source": [
-    "### $$\\Delta_{2}=-4\\cdot0^2+4\\cdot6^2+20\\cdot6+24>0$$"
+    "### $$\\Delta_{2}=-4x^2+4y^2+20y+24=-4\\cdot0^2+4\\cdot (-6)^2+20\\cdot (-6)+24>0$$"
    ]
   },
   {
@@ -691,13 +723,37 @@
    "id": "77ff9ebb",
    "metadata": {},
    "source": [
-    "Оба минора положительные, это говорит о том, что найденная точка (0,6) является точкой минимума."
+    "точка (0,-6) является точкой максимума"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef9d9fae",
+   "metadata": {},
+   "source": [
+    "Проверим знаки миноров для точки ($2\\sqrt2$,-2). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05a8f18e",
+   "metadata": {},
+   "source": [
+    "### $$\\Delta_{1}=2y+4=2\\cdot (-2)+4=0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d8be959",
+   "metadata": {},
+   "source": [
+    "тупик"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37f60993",
+   "id": "3a8e6688",
    "metadata": {},
    "outputs": [],
    "source": []
