--- a/Calculus_HW_8.ipynb
+++ b/Calculus_HW_8.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56f365db",
+   "id": "0f658935",
    "metadata": {},
    "source": [
     "### $$L(x,y,\\lambda)=3-8x+6y +\\lambda \\cdot (x^2+y^2-36)$$"
@@ -56,19 +56,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06075126",
+   "id": "2af6868f",
    "metadata": {},
    "source": [
     "### $$\\begin{cases}\n",
     "L'_{x}=-8+2\\lambda x=0, \\\\\n",
     "L'_{y}=6+2\\lambda y=0, \\\\\n",
-    "L'_{\\lambda}=x^2+y^2-36=0\n",
-    "\\end{cases}$$"
+    "L'_{\\lambda}=x^2+y^2-36=0 \\end{cases}$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b9a4949c",
+   "id": "b0f2baf8",
    "metadata": {},
    "source": [
     "### $$\\left[ \\begin{cases}\n",
@@ -81,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5226231a",
+   "id": "105f3139",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -89,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5588887e",
+   "id": "2fa171ae",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -97,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7eb298d6",
+   "id": "16c106d0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -105,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57fb366c",
+   "id": "3531598e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -113,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f62ec348",
+   "id": "79ef462c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -121,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a322a251",
+   "id": "d9d59c96",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -129,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c40e70a0",
+   "id": "291ef6db",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -137,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdecb2d1",
+   "id": "cc27654b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -145,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b347cb7b",
+   "id": "d626025a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -187,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "61ff717e",
+   "id": "431a92b5",
    "metadata": {},
    "outputs": [
     {
@@ -215,14 +214,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "523f08c9",
+   "id": "80db9264",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "e346639b",
+   "id": "aafaa31a",
    "metadata": {},
    "source": [
     "__4*.__ Численно найти все $5$ действительных корней."
@@ -231,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b20e64f8",
+   "id": "2260ed7a",
    "metadata": {},
    "outputs": [
     {
