--- a/Calculus_HW_8.ipynb
+++ b/Calculus_HW_8.ipynb
@@ -59,10 +59,7 @@
    "id": "2af6868f",
    "metadata": {},
    "source": [
-    "### $$\\begin{cases}\n",
-    "L'_{x}=-8+2\\lambda x=0, \\\\\n",
-    "L'_{y}=6+2\\lambda y=0, \\\\\n",
-    "L'_{\\lambda}=x^2+y^2-36=0 \\end{cases}$$"
+    "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0, \\\\L'_{y}=6+2\\lambda y=0, \\\\L'_{\\lambda}=x^2+y^2-36=0 \\end{cases}$$"
    ]
   },
   {
