--- a/Calculus_HW_8.ipynb
+++ b/Calculus_HW_8.ipynb
@@ -59,7 +59,8 @@
    "id": "2af6868f",
    "metadata": {},
    "source": [
-    "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0, \\\\L'_{y}=6+2\\lambda y=0, \\\\L'_{\\lambda}=x^2+y^2-36=0 \\end{cases}$$"
+    "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0, \\\\L'_{y}=6+2\\lambda y=0, \\\\L'_{\\lambda}=x^2+y^2-36=0 \\end{cases}\\Rightarrow \\begin{cases} x=\\frac{4}{\\lambda} \\\\ y=\\frac{3}{\\lambda} \\\\ \\lambda^2=\\frac{25}{36}\\end{cases}\\Rightarrow \n",
+    "\\left[ \\begin{gathered} \\begin{cases} x=\\frac{24}{5} \\\\ y=\\frac{18}{5} \\\\ y=\\frac{5}{6} \\end{cases} \\begin{cases} x=-\\frac{24}{5} \\\\ y=-\\frac{18}{5} \\\\ y=-\\frac{5}{6} \\end{cases} \\end{gathered}\\right. $$\n"
    ]
   },
   {
@@ -75,12 +76,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "105f3139",
+   "cell_type": "markdown",
+   "id": "edf4664d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### $$\\left[\n",
+    "   L'_{x}=-8+2\\lambda x=0, \\\\\n",
+    "   L'_{y}=4+\\lambda \\cdot2y=0, \\\\\n",
+    "   L'_{\\lambda}=x^2+y^2-25=0\n",
+    " \\\\right.$$"
+   ]
   },
   {
    "cell_type": "code",
@@ -99,12 +104,30 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3531598e",
+   "cell_type": "markdown",
+   "id": "cb0c9cf0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0, \\\\L'_{y}=6+2\\lambda y=0, \\\\L'_{\\lambda}=x^2+y^2-36=0 \\end{cases}\\Rightarrow \\begin{cases} x=\\frac{4}{\\lambda} \\\\ y=\\frac{3}{\\lambda} \\\\ \\lambda^2=\\frac{25}{36}\\end{cases}\\Rightarrow \n",
+    "\\left[ \n",
+    "    \\begin{gathered} \n",
+    "        \\left\\{\n",
+    "        \\begin{gathered}\n",
+    "            x=\\frac{24}{5} \\\\ \n",
+    "            y=\\frac{18}{5} \\\\ \n",
+    "            y=\\frac{5}{6}\n",
+    "        \\end{gathered}\n",
+    "        \\right. \\\\\n",
+    "        \\left\\{\n",
+    "        \\begin{gathered}\n",
+    "            x=-\\frac{24}{5} \\\\ \n",
+    "            y=-\\frac{18}{5} \\\\ \n",
+    "            y=-\\frac{5}{6} \n",
+    "        \\end{gathered}\n",
+    "        \\right. \n",
+    "    \\end{gathered} \n",
+    "\\right.$$"
+   ]
   },
   {
    "cell_type": "code",
