--- a/Calculus_HW_8.ipynb
+++ b/Calculus_HW_8.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edf4664d",
+   "id": "fa0e3af7",
    "metadata": {},
    "source": [
     "### $$\\left[\n",
@@ -105,28 +105,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb0c9cf0",
+   "id": "bf3454b3",
    "metadata": {},
    "source": [
-    "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0, \\\\L'_{y}=6+2\\lambda y=0, \\\\L'_{\\lambda}=x^2+y^2-36=0 \\end{cases}\\Rightarrow \\begin{cases} x=\\frac{4}{\\lambda} \\\\ y=\\frac{3}{\\lambda} \\\\ \\lambda^2=\\frac{25}{36}\\end{cases}\\Rightarrow \n",
-    "\\left[ \n",
-    "    \\begin{gathered} \n",
-    "        \\left\\{\n",
-    "        \\begin{gathered}\n",
-    "            x=\\frac{24}{5} \\\\ \n",
-    "            y=\\frac{18}{5} \\\\ \n",
-    "            y=\\frac{5}{6}\n",
-    "        \\end{gathered}\n",
-    "        \\right. \\\\\n",
-    "        \\left\\{\n",
-    "        \\begin{gathered}\n",
-    "            x=-\\frac{24}{5} \\\\ \n",
-    "            y=-\\frac{18}{5} \\\\ \n",
-    "            y=-\\frac{5}{6} \n",
-    "        \\end{gathered}\n",
-    "        \\right. \n",
-    "    \\end{gathered} \n",
-    "\\right.$$"
+    "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0 \\\\L'_{y}=6+2\\lambda y=0 \\\\L'_{\\lambda}=x^2+y^2-36=0\n",
+    "\\end{cases} \\Rightarrow \\begin{cases} x=\\frac{4}{\\lambda} \\\\ y=\\frac{3}{\\lambda} \\\\ \\lambda^2=\\frac{25}{36}\\end{cases} \\Rightarrow \\left[ \\begin{gathered} \\left\\{\\begin{gathered}x=\\frac{24}{5} \\\\ y=\\frac{18}{5} \\\\ y=\\frac{5}{6}\\end{gathered}\\right. \\\\ \\left\\{\\begin{gathered}x=-\\frac{24}{5} \\\\ y=-\\frac{18}{5} \\\\ y=-\\frac{5}{6} \\end{gathered}\\right.\\end{gathered} \\right.$$"
    ]
   },
   {
@@ -182,6 +165,72 @@
     "\n",
     "### $$x^2+16y^2=64$$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc4af90f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f683e11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b483da4c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1afec73",
+   "metadata": {},
+   "source": [
+    "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0, \\\\L'_{y}=6+2\\lambda y=0, \\\\L'_{\\lambda}=x^2+y^2-36=0 \\end{cases}\\Rightarrow\\begin{cases} x=\\frac{4}{\\lambda} \\\\ y=\\frac{3}{\\lambda} \\\\ \\lambda^2=\\frac{25}{36}\\end{cases}\\Rightarrow \n",
+    "\\left[ \n",
+    "    \\begin{gathered} \n",
+    "        \\left\\{\n",
+    "        \\begin{gathered}\n",
+    "            x=\\frac{24}{5} \\\\ \n",
+    "            y=\\frac{18}{5} \\\\ \n",
+    "            y=\\frac{5}{6}\n",
+    "        \\end{gathered}\n",
+    "        \\right. \\\\\n",
+    "        \\left\\{\n",
+    "        \\begin{gathered}\n",
+    "            x=-\\frac{24}{5} \\\\ \n",
+    "            y=-\\frac{18}{5} \\\\ \n",
+    "            y=-\\frac{5}{6} \n",
+    "        \\end{gathered}\n",
+    "        \\right. \n",
+    "    \\end{gathered} \n",
+    "\\right.$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbe6582e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8a5a7ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
